# SolarSystemOpenGL

./: CMakeLists.txt  main.cpp
Headers/: Window.h
Render/Headers/: ShaderProgram.h
Render/Sources/: ShaderProgram.cpp
Sources/: Window.cpp  main.cpp
res/Shaders/: fragment.txt  vertex.txt
src/: Window.cpp  Window.h  main.cpp
src/Render/: ShaderProgram.cpp
src/Resources/: ResourceManager.cpp  ResourceManager.h
